kubernetes-templating/frontend/templates/ingress.yaml
##apiVersion: networking.k8s.io/v1beta1
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  tls:
  - hosts:
    - shop.35.228.204.248.nip.io
    secretName: shop-tls-production
  rules:
  - host: shop.35.228.204.248.nip.io
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 80
